static/css/style.css
/* ... */
.p-label-replace {
    margin-top: 2rem;
    font-weight: 600;
}

.checkbox-label label {
    line-height: 1;
    margin: 0 !important;
}

label[for="id_price"] {
    margin-top: 0.5rem !important;
}

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.thumbnail-image {
    width: 100px;
    height: auto;
    border-radius: 5px;
}

/* Stripe Elements */

#card-element {
    width: 100%;
    height: 40px;
    font-size: 16px;
    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.50) inset;
    transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
    -o-transition: all .2s ease-in-out;
    
}

.StripeElement {
  padding: 10px 12px;
  border: 1px solid transparent;
  border-radius: 0;
}

.text-danger {
    color: var(--warning) !important;
}


/* Nav */

/* Upper Nav */

.logo-div *,
.logo-div-mobile * {
    margin: 0;
    padding: 0;
}

.logo-div h2 {
    font-size: 1.67rem;
}

.logo-text-mobile h2 {
    font-size: 14px;
}

.logo-div p {
    font-size: 0.8rem;
}

.logo-img {
    width: 50px;
}

.logo-img-mobile {
    width: 42px;
    margin-bottom: 5px;
}

.logo-div a {
    display: flex;
}

.ib-search-box {
    height: 42px;
    border-radius: 2px;
    background-color: var(--light);
    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.50) inset;
    display: flex;
    justify-content: space-between;
    overflow: hidden;
}

.ib-search-box input {
    border: none;
    background: none;
    padding: 5px;
    padding-left: 10px;
    flex-grow: 1;
}

.ib-search-box button {
    background-color: var(--mid-grey);
    border-radius: 0;
    width: 42px;
    border: none;
    transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
    -o-transition: all .2s ease-in-out;
}

.ib-search-box button:hover {
    background-color: var(--dark-grey);
}

.ib-search-box button i {
    font-size: 20px;
    line-height: unset;
}

.ib-search-box input:focus,
.ib-search-box input:focus-visible {
    box-shadow: 0px 0px 0px 2px var(--blue) inset;
    border: none !important;
    outline: none !important;
}

.fa-lg {
    font-size: 1.5em !important;
    line-height: 0.5em !important;
}

.upper-nav-link:hover {
    color: var(--dark);
}

.list-inline-item:not(:last-child) {
    margin-right: 0.8rem;
}

.account-dropdown {
    right: 0;
    border-radius: 3px;
    width: fit-content;
}

.icon-hex i {
    font-size: 1.1em !important;
}

.icon-hex {
    width: 20px;
    height: 32px;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    background: var(--dark-grey);
}

.icon-hex:before {
    content: " ";
    width: 0; height: 0;
    border-top: 15px solid transparent;
    border-bottom: 15px solid transparent;
    border-right: 9px solid var(--dark-grey);
    position: absolute;
    left: -9px;
}

.icon-hex::after {
    content: " ";
    width: 0; height: 0;
    border-top: 15px solid transparent;
    border-bottom: 15px solid transparent;
    border-left: 9px solid var(--dark-grey);
    position: absolute;
    right: -9px;
}

.icon-hex,
.icon-hex:before,
.icon-hex::after,
.bag-total {
    transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    -webkit-transition: all .3s ease-in-out;
    -o-transition: all .3s ease-in-out;
}


.hex-nav-link:hover .icon-hex {
    background-color: var(--dark);
}

.hex-nav-link:hover .icon-hex:before {
    border-right: 9px solid var(--dark);
}

.hex-nav-link:hover .icon-hex:after {
    border-left: 9px solid var(--dark);
}

.hex-nav-link:hover .bag-total {
    color: var(--dark);
}


/* Lower Nav */

.lower-nav-dropdown p {
    font-size: 16px;
    padding: .3rem 0;
}

.lower-nav-link-text {
    font-size: 16px;
    margin: 0;
    padding: 0;
}

.lower-nav-link-text,
.upper-nav-link-text {
    text-decoration: underline;
    text-underline-offset: 4px;
    text-decoration-thickness: 2px; 
    -webkit-text-decoration-color: rgba(20, 12, 0, 0);
    text-decoration-color: rgba(20, 12, 0, 0);
    transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    -webkit-transition: all .3s ease-in-out;
    -o-transition: all .3s ease-in-out;
}

.upper-nav-link-text {
    text-decoration-thickness: 2px;
}

.lower-nav-link:hover .lower-nav-link-text,
.upper-nav-link-text:hover {
        text-decoration-color: rgba(20, 12, 0, 1) !important;
        -webkit-text-decoration-color: rgba(20, 12, 0, 1) !important;
        -moz-text-decoration-color: rgba(20, 12, 0, 1) !important;
        -o-text-decoration-color: rgba(20, 12, 0, 1) !important;
}

.dropdown-item:hover {
    background: none !important;
}

.lower-nav-link > div {
    display: flex;
    align-items: center;
}

#delivery-banner p {
    font-size: 18px;
    letter-spacing: 1.8px;
}


/* Footer */

.ib-row {
    margin-left: 0 !important;
    margin-right: 0 !important;
}

.upper-footer-section h1 {
    font-size: 18px;
}

.upper-footer-section i {
    margin-right: 5px;
}

#lower-footer-links i {
    font-size: 30px
}

.footer-link-text {
    text-decoration: underline;
    text-underline-offset: 4px;
    text-decoration-thickness: 1px;
    -webkit-text-decoration-color: rgba(255, 254, 251, 0);
    text-decoration-color: rgba(255, 254, 251, 0);
    transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    -webkit-transition: all .3s ease-in-out;
    -o-transition: all .3s ease-in-out;
}

.upper-footer-section:last-of-type p {
    font-size: 14px;
}

.upper-footer-section a:hover .footer-link-text {
        -webkit-text-decoration-color: rgba(255, 254, 251, 1);
        text-decoration-color: rgba(255, 254, 251, 1);
}

#footer-padding {
    height: 60px;
}
/* ... */

